[package]
name = "dicom-volume"
version = "0.1.3"
authors = ["David Peherstorfer"]
edition = "2024"
description = "A high-level API for handling multiple DICOM files as volumes"
documentation = "https://docs.rs/dicom-volume"
homepage = "https://github.com/Cryt1c/dicom-volume"
repository = "https://github.com/Cryt1c/dicom-volume"
license = "Apache-2.0"
keywords = ["dicom", "medical", "imaging", "volume", "mpr"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]
name = "dicom_volume"

[dependencies]
bytemuck = "1.24.0"
dicom = { version = "0.9.0", features = ["ndarray"] }
dicom-dictionary-std = "0.9.0"
futures = "0.3.31"
half = { version = "2.7.1", features = ["bytemuck"] }
image = "0.25.8"
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.11.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
web-time = "1.1.0"
wgpu = "27.0.1"
